--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.1.5",
     "eslint-plugin-import": "^2.31.0",
+    "msw": "^2.7.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
